# PD15_Ishemgulov_L27

./: db.sqlite3  execute_sqltable.py  json_load.py  manage.py  pyproject.toml  test.py
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
datasets/: ads.json  categories.json
hunting/: asgi.py  settings.py  urls.py  wsgi.py
