[tool.poetry]
name = "pd15-ishemgulov-lesson27"
version = "0.1.0"
description = ""
authors = ["rizv4n <rizvanishemgulov@gmail.com>"]
readme = "README.md"
packages = [{include = "pd15_ishemgulov_lesson27"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
